2007-02-08 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* testsuite/libprometheus/get_installed_version/*,
	  testsuite/libprometheus/source_config/logdir,
	  testsuite/libprometheus/Makefile: Removed obsolete tests.

2007-02-07 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/pkgrm.in: Renamed `pkg_post_remove' to `post_remove_pkg'
	  for consistency's sake.
	* profiles/lfs-6.1/prometheus: Fixed wrong name for the deps array.

2006-02-06 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* *: Tagged and released Prometheus 0.2-beta1

	* profiles/lfs-6.1/lfs, profiles/lfs-6.1/stage2,
	  profiles/lfs-6.1/rootfs: Fixed the last issues with the LFS profiles.
	* scripts/libprometheus.bash.in: Fixed another bug that cripples the
	  environment during LFS builds.
	* scripts/pkginstall.in: Fixed checking for already installed packges
	  when building LFS.

2006-02-05 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/absolute.cc: Implemented relative function.
	* reroot/libreroot/absolute.h: Added inline in-place conversion
	  functions.

	* reroot/rerootctl/arguments.cc: Made index filename absolute before
	  sending it to rerootd.  Comments ammended.

2006-02-04 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/cstringptr.h: Added.
	* reroot/libreroot/absolute.cc: Use CStringPtr instead of char *, use
	  empty instead of length, added new relative function.

	* reroot/libreroot/message.cc, reroot/rerootctl/arguments.cc: Use empty
	  instead of length.

2006-02-03 Oliver Brakmann <olivebrakmann@users.berlios.de>

	* profiles/lfs-6.1/*: Fixed another round of bugs in the profiles.
	  LFS should compile now from start to finish.

	* scripts/pkginstall.in: Fixed a sed that broke on files installed by
	  glibc. Again.

	* scripts/libprometheus.bash.in: Fixed rebuilding the 'info' directory.
	  Made the rebuilding of info nodes quiet. Fixed PATH after dropping
	  privileges in LFS builds. 
